Improved alert message for files too large Fixed bounds of listview repos

--- a/res/style/repo_layout.css
+++ b/res/style/repo_layout.css
@@ -1,4 +1,5 @@
 #repoItem:hover, #repoItem:pressed, #repoItem:focused {
   -fx-border-color: lightskyblue;
   -fx-border-insets: -1;
+  -fx-background-color: skyblue;
 }
